第11章机翻完毕

--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -317,7 +317,7 @@
   - [11.7Zone changes](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Zone_changes)
   - 区域变化
   - [11.8Correcting development trajectory](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Correcting_development_trajectory)
-  - 校正发展轨迹
+  - 校正发展轨道
   - [11.9Changes to push zone with age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Changes_to_push_zone_with_age)
   - 不同年龄下的推动区变化
   - [11.10Complexities of influence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Complexities_of_influence)
