--- a/I would never send my kids to school我再也不会把孩子送去学校/10.Why schools fail为什么学校会失败.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/10.Why schools fail为什么学校会失败.md
@@ -39,7 +39,7 @@ Here is a short path of a great nugget of knowledge that can change the world:
 - **creativity cycle**: the nugget gains in power if it increases in [coherence](https://supermemo.guru/wiki/Coherence) by [generalization](https://supermemo.guru/wiki/Generalization), selective [forgetting](https://supermemo.guru/wiki/Forgetting), creative association, etc. Those processes require peace, creative wandering, thinking, [sleep](https://supermemo.guru/wiki/Sleep), and plenty of time. [All those components of mind growth](https://supermemo.guru/wiki/Natural_creativity_cycle) are suppressed in the chaos of the education system. Even [sleep](https://supermemo.guru/wiki/Science_of_sleep), the most essential component in question, is held in disrespect. In addition to those inherent design problems of the [Prussian system](https://supermemo.guru/wiki/Prussian_system), there are dozens of other factors that interfere with learning, e.g. [bullying](https://supermemo.guru/wiki/Bullying), drugs, authoritarian teachers, etc. For a richer list see: [Problem of schooling](https://supermemo.guru/wiki/Problem_of_schooling)
 - **创造力周期**：如果高价值知识通过[泛化](https://supermemo.guru/wiki/Generalization)、选择性[遗忘](https://supermemo.guru/wiki/Forgetting)、创造性联想等方式增加[连贯性](https://supermemo.guru/wiki/Coherence)，那么它就会获得能量。这些过程需要和平、创造性的漫游、思考、[睡眠](https://supermemo.guru/wiki/Sleep)和充足的时间。在混乱的教育系统中，[所有这些心智成长的组成部分](https://supermemo.guru/wiki/Natural_creativity_cycle)都被抑制了。甚至对睡眠这一最基本的因素也是不尊重的。除了[普鲁士制度](https://supermemo.guru/wiki/Prussian_system)固有的设计问题之外，还有许多其他因素干扰学习，如[欺凌](https://supermemo.guru/wiki/Bullying)、毒品、威权教师等等。要获得更丰富的列表，参见：[学校教育问题](https://supermemo.guru/wiki/Problem_of_schooling)
 - **problem solving**: finally, the nugget of knowledge can be employed in the process of problem solving. The education system focuses on consumption, provides little room for [creativity](https://supermemo.guru/wiki/Creativity), and little room for [genuine problem solving](https://supermemo.guru/wiki/How_to_solve_any_problem%3F) where novel problems are tackled with little external guidance, and without robotic regurgitation of well-known algorithms. **Finding dichotomies and making serial micro-decisions are part of a brain's repertoire of habits that underlie efficient problem solving. The education system suppresses the natural quest for autonomous decision making**
-- **问题解决**：最后，高价值知识会被投入到解决问题的过程中。教育系统注重消费，几乎没有给[创造力](https://supermemo.guru/wiki/Creativity)提供空间，也没有什么空间来[解决真正的问题](https://supermemo.guru/wiki/How_to_solve_any_problem%3F)。真实情况下，新的问题在很少的外部指导下得到解决，并且没有重复造轮子（译者注：这里我也不太理解）。**发现二分法和做出一系列小决策是大脑习惯的一部分，这些习惯是有效解决问题的基础。教育系统抑制了对自主决策的本能追求。**
+- **问题解决**：最后，高价值知识会被投入到解决问题的过程中。教育系统注重消费，几乎没有给[创造力](https://supermemo.guru/wiki/Creativity)提供空间，也没有什么空间来[解决真正的问题](https://supermemo.guru/wiki/How_to_solve_any_problem%3F)。真实情况下，新的问题的解决，既不依靠外部的指导，又不诉诸于机械地回顾已知的算法。**发现二分法和做出一系列小决策是大脑习惯的一部分，这些习惯是有效解决问题的基础。教育系统抑制了对自主决策的本能追求。**
 
 ## 10.3 Schools abandon exploration
 
