--- a/I would never send my kids to school我再也不会把孩子送去学校/11.Optimum push zone最佳推动区.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/11.Optimum push zone最佳推动区.md
@@ -4,138 +4,268 @@
 
 **Optimum push zone** is a range of minimum outside pressure that makes the child develop better than without external influences. For example, competition with other children may encourage harder work. Naturally, external pressure may also result in regression. Progress may also occur at levels of pressure that are greater than necessary to achieve the same level of improvement. The push zone is defined on long-term outcomes, which are very different from short-term outcomes.
 
+**最佳推动区**是一个最小的外部压力范围，使孩子比没有外部影响更好地发展。例如，与其他孩子的竞争可能鼓励更努力的工作。自然，外部压力也可能导致回退。进步也可能发生在比达到同样水平的改进所必需的更大的压力水平上。推动区是根据长期结果来定义的，长期结果与短期结果有很大的不同。
+
 [![Optimal push zone in education](https://supermemo.guru/images/thumb/f/f6/Optimal_push_zone.png/800px-Optimal_push_zone.png)](https://supermemo.guru/wiki/File:Optimal_push_zone.png)
 
-> **Figure:** **\*Optimum push zone** (in blue) is the range of external pressure that is likely to improve learning outcomes. If the pressure increases beyond the push zone, the learning outcomes decrease. At some point, instead of more learning, pressure will result in less learning (**regress zone** in black). Schooling results in increased tolerance for coercion via learned helplessness (in green). It also decreases the learning outcomes and increases the required level of coercion*
+> **Figure**:**Optimum push zone**(in blue) is the range of external pressure that is likely to improve learning outcomes. If the pressure increases beyond the push zone, the learning outcomes decrease. At some point, instead of more learning, pressure will result in less learning (**regress zone** in black). Schooling results in increased tolerance for coercion via learned helplessness (in green). It also decreases the learning outcomes and increases the required level of coercion
+>
+> **图**：**最佳推进区**(蓝色)是可能改善学习结果的外部压力范围。如果压力超过推动区，学习结果就会下降。在某一点上，压力会导致学习的减少，而不是更多的学习(黑色的**回退区**)。学校教育通过习得性无助感(绿色)提高了对胁迫的容忍度。它还会降低学习结果，并增加所需的强制级别。
 
 ## 11.1 Push zone at school
 
+## 学校中的推动区
+
 The **optimum push zone** is usually far narrower than it is popularly assumed. The whole system of [coercive education](https://supermemo.guru/wiki/Coercion_in_learning) exerts pressures that go wildly beyond the optimum in most cases. This comes from the illusion of progress created by short-term outcomes. Excessive pressure slows down long-term development of children or results in regression in comparison to what would be achieved without schooling. Pressure is the key factor that explains [why kids hate school](https://supermemo.guru/wiki/Why_kids_hate_school).
+
+**最佳推动区**通常比通常假设的窄得多。在大多数情况下，整个强制性教育系统施加的压力远远超出最佳水平。这是由于短期成果造成的对进展的幻想。过大的压力会减缓儿童的长期发展，或导致与不上学所取得的成绩相比出现倒退。压力是解释为什么孩子们讨厌学校的关键因素。
 
 Focus on short-term outcomes in schooling results in pressures extending well beyond the optimum push zone
 
+关注学校教育的短期结果会导致压力远远超出最佳推动区。
+
 ## 11.2 Zone of proximal development
+
+## 近端发展区
 
 **Zone of proximal development (ZPD)** was defined by [Vygotski](https://en.wikipedia.org/wiki/Lev_Vygotsky) as the optimum guidance zone in which a student can master harder material or skills with a degree of guidance from a tutor. Zone of proximal development is often discussed in education. It may fit classroom situations, however, it does not extend into [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning).
 
+**近端发展区（ZPD）**被 Vygoski 定义为在导师的指导下，学生可以掌握较难掌握的材料或技能的最佳指导区。最近发展区在教育中经常被讨论。它可能适合课堂情境，但是它并不能延伸到自我导向的学习中。
+
 My main problem with the zone of proximal development (ZPD) is that for a healthy brain given enough time, ZPD should be zero. ZPD makes sense in a classroom, in limited time. However, in [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning), where time can be stretched due to [self-pacing](https://supermemo.guru/wiki/Self-paced_learning), ZPD is less relevant. With access to the web, we have nearly all important human resources available at fingertips. Only time and the capacity of the human brain form the limits.
+
+我对近端发育区(ZPD)的主要问题是，如果一个健康的大脑有足够的时间，那么ZPD应该是零。在有限的时间里，ZPD在教室里是有意义的。然而，在自我导向学习中，由于自我节奏的作用，时间会被延长，而ZPD则不那么重要。有了网络，我们几乎所有重要的人力资源都可以随时使用。只有时间和人脑的容量才是极限。
 
 Vygotsky was interested in what a tutor can do. I am interested in what a child can do on her own. In this [book](https://supermemo.guru/wiki/Problem_of_Schooling), instead of [Zone of proximal development (ZPD)](https://en.wikipedia.org/wiki/Zone_of_proximal_development), I use the term: **the optimum push zone**, or simply the **push zone**.
 
+维果茨基对家教能做什么很感兴趣。我对一个孩子一个人能做什么感兴趣。在这本书中，我使用的术语不是近端发展区(ZPD)，而是**最佳推动区**，或者简单地说就是**推动区**。
+
 Zone of proximal development (ZPD) is defined on the space of positive forces (helping guidance), while the push zone is defined on the space of predominantly negative forces ([coercion](https://supermemo.guru/wiki/Coercion_in_learning) and distraction). Zone of proximal development (ZPD) shows what learning steps can be undertaken in teaching, while the push zone reflects **expected learning outcomes** under a degree of pressure (with or without tutoring).
+
+近端发展区(ZPD)是在正向力空间(帮助引导)上定义的，而推动区(Push Zone)是在以负力为主的空间(胁迫和分心)上定义的。最近发展区(ZPD)显示了在教学中可以采取哪些学习步骤，而推动区反映了在一定程度的压力(有或没有辅导)下的**预期学习结果**。
 
 ZPD focuses on immediate outcomes, while the push zone focuses on **long-term outcomes**. In ZPD, we investigate the impact of help and guidance, while in the push zone, we look at external pressure affecting [self-directed](https://supermemo.guru/wiki/Self-directed_learning) trajectory. This pressure does not need to involve help in learning. However, it should affect the expected trajectory outcome as predicted by "the pusher". For example, putting a time limit on gaming or TV time would be a form of external pressure that may match the optimum push zone. Naturally, external pressure works best if it happens in a framework of mutual consent.
 
+ZPD 关注的是眼前的结果，而推动区则关注的是**长期的结果**。在 ZPD 中，我们研究了帮助和引导的影响，而在推动区，我们考察了外部压力对自我导向轨道的影响。这种压力不需要帮助学习。然而，它应该会影响“推进者”所预测的预期轨道结果。例如，对游戏或电视时间设置时间限制将是一种可能与最佳推动区相匹配的外部压力形式。当然，如果外部压力发生在相互同意的框架内，效果最好。
+
 ## 11.3 Push zone and coercion
+
+## 推动区和强制
 
 Throughout this [book](https://supermemo.guru/wiki/Problem_of_Schooling), I depict the dangers of [coercion in learning](https://supermemo.guru/wiki/Coercion_in_learning). The existence of the push zone is not an indication that coercion is valuable. When a parent pressures a kid to take on learning by means of persuasion, it is also a push that is not coercive. As long as the kid can back off or ignore the pressure, it will not count as coercion.
 
+在这本书中，我描述了强迫学习的危险。推动区的存在并不表明强制是有价值的。当父母以说服的方式迫使孩子学习的时候，这也是一种非强制性的推动。只要孩子能退缩或无视压力，这就不算胁迫了。
+
 Moreover, the pressure is not supposed to push the kid into learning and to sustain learning. The most useful and frequently employed form of pressure might move a kid from one high [learntropy](https://supermemo.guru/wiki/Learntropy) area to another high learntropy area. Transition to higher learntropy through a trough of displeasure is obviously beneficial. For example, a kid might move from a shooting [videogame](https://supermemo.guru/wiki/Videogames) to an educational videogame. A less obvious approach might be a move to lower learntropy with predicted better long-term outcomes, e.g. move from a videogame to reading a book. There are risks involved. We may always have an impression that a book is better than a videogame, but the true assessment comes not from the content of the book or game, but from kid's own interaction with the learning material. Learntropy determines the actual flow of knowledge and there are many invisible factors and forces that can easily be misjudged externally.
+
+此外，这种压力不应该推动孩子学习和持续学习。最有用和最常用的压力形式可能会将孩子从一个高度学习各向异性的区域转移到另一个高度学习各向异性区域。通过不愉快的低谷过渡到更高的学习能力显然是有益的。例如，一个孩子可能会从一个射击游戏变成一个教育游戏。一种不太明显的方法可能是降低学习兴趣，并预测更好的长期结果，例如从玩电子游戏到看书。这是有风险的。我们可能总会有这样一种印象：一本书比电子游戏更好，但真正的评价不是来自这本书或游戏的内容，而是来自孩子自己与学习材料的互动。学习性决定了知识的实际流动，也存在着许多看不见的因素和力量，这些因素和力量很容易被外界误判。
 
 The push should transfer a kid from one area of high [learntropy](https://supermemo.guru/wiki/Learntropy) to another area of high learntropy. It should not [push the kid into unpleasant learning](https://supermemo.guru/wiki/Fundamental_law_of_learning)!
 
+这种推动应该把孩子从一个学习能力强的领域转移到另一个学习能力强的领域。它不应该把孩子推到不愉快的学习中去！
+
 ## 11.4 Comfort zone
+
+## 舒适区
 
 When there is little pressure or distraction, a student may operate in a **comfort zone**, in which she predominantly develops on her own using [self-paced](https://supermemo.guru/wiki/Self-paced_learning)and [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning). Depending on the child, the subject domain, and the environment, the comfort zone may bring fantastic outcomes (e.g. when pursuing an ambitious passion or hobby) or a developmental regression (e.g. in various form of dependence, e.g videogames, social media, peers, etc.). For many kids, development in the comfort zone is ruined by environmental distractions (e.g. difficult situation at home). Most of kids attending school quickly regress to a point where operations in the comfort zone lead to little or no progress. In that sense, external pressures can shift the push zone in the direction where more pressure is needed to obtain positive outcomes. In extreme cases, the child may regress via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) into a total loss of the [learn drive](https://supermemo.guru/wiki/Learn_drive). This is the main underlying cause for which [kids hate school](https://supermemo.guru/wiki/Why_kids_hate_school%3F).
 
+当没有压力或分心时，学生可能会在一个舒适的区域进行操作，在这个区域中，她主要是通过自我调整和自我指导的学习来发展自己的能力。根据孩子、学科领域和环境的不同，舒适区可能会带来奇妙的结果(例如当追求一种雄心勃勃的激情或爱好时)或发展的倒退(例如各种形式的依赖，例如视频游戏、社交媒体、同龄人等)。对许多孩子来说，环境干扰破坏了他们在舒适区的发展(例如，家里的困难状况)。大多数上学的孩子很快就会倒退到在舒适区做手术只会导致很少或根本没有进步的地步。从这个意义上说，外部压力可以将推力区向需要更多压力才能获得积极结果的方向移动。在极端的情况下，孩子可能通过学习的无助感回归到学习动力的完全丧失。这是孩子们讨厌学校的主要根本原因。
+
 ## 11.5 Regress zone
+
+## 退步区
 
 **Regress zone** is where the pressure brought in by the tutor will have an overall negative impact on development. Regress zone is particularly extensive in small children. [Early academic instruction](https://supermemo.guru/wiki/Abandon_early_math_instruction!) may backfire in the long term even if it is not highly coercive. This is why early school age is harmful.
 
+退化区是指导师所带来的压力会对发展产生整体的负面影响的区域。退化区在幼儿中尤为广泛。从长远来看，早期的学术指导可能会适得其反，即使它并不具有很强的强制性。这就是为什么早起的学龄儿童是有害的。
+
 Regress zone may bring some short-term positive outcomes, e.g. passing a test, but it will produce a negative number on the overall development benchmark whichever way it is defined by or for the student. Depending on the degree of pressure exerted on the student within the regress zone, it may produce a mild slowdown, e.g. an increase in a dislike for learning, or dramatic results such as stress, neuronal death, psychiatric disorders, suicide, and the like.
+
+回归区可能会带来一些短期的积极结果，例如通过一项测试，但它会在总体发展基准上产生一个负数，无论它是由学生定义的，还是为学生定义的。根据在回归区域内对学生施加的压力的程度，它可能会产生轻微的减缓，例如，对学习的厌恶增加，或戏剧性的结果，如压力、神经元死亡、精神障碍、自杀等。
 
 The importance of differentiating the push zone from the ZPD comes from the fact that the optima set by ZPD may bring long-term regress. In other words, a child can progress in a short term, e.g. by mastering a skill, and regress in a long term by conditioning a dislike for learning, e.g. in the domain of the learned skill. For example, we can send a kid to a music school, employ ZPD, observe a fantastic progression of skills, and still end up with a disappointing outcome in which the kid loses her passion for music.
 
+区分推力区和ZPD的重要性来自于ZPD设置的最佳值可能会带来长期的回归。换言之，儿童可以在短期内取得进步，例如通过掌握一项技能，而在长期内可以通过限制对学习的厌恶而退步，例如在所学技能领域。例如，我们可以把一个孩子送到音乐学校，雇佣ZPD，观察技能的惊人进步，但结果仍然令人失望，孩子失去了对音乐的热情。
+
 Many tools used in schooling tend to operate in the regress zone despite providing an illusion of progress by employing short-term benchmarks. Those tools include: [homework](https://supermemo.guru/wiki/Homework), [cramming](https://supermemo.guru/wiki/Cramming), [testing](https://supermemo.guru/wiki/Testing), grades, threats, bribes, [coercion](https://supermemo.guru/wiki/Coercion_in_learning), compulsory reading set, etc.
+
+许多用于教育的工具倾向于在倒退区运行，尽管通过使用短期基准提供了一种进步的假象。这些工具包括:家庭作业、填鸭式学习、考试、分数、威胁、贿赂、胁迫、强制阅读等。
 
 One of the greatest dangers of teaching is the illusion in which positive short-term effects obscure negative long-term outcomes
 
+教学的最大危险之一是一种错觉，在这种错觉中，积极的短期效果掩盖了消极的长期结果
+
 ## 11.6 The optimum push
+
+## 最佳推动力
 
 If we take the axis of influence from negative to positive infinity as defined for any type of external pressure, the optimum push zone will lie between the comfort zone, with some overlap, and the regress zone. The part of the curve with positive outcomes will be divided into two portions: the optimum push zone, and the zone of progress where the same outcomes are achieved at higher pressure.
 
+如果我们将影响轴从负无穷到正无穷取任意一种外部压力的定义，最优推区将位于舒适区和后退区之间，有一些重叠。具有正向结果的曲线部分将分为两部分:最优推区和在较高压力下获得相同结果的进展区。
+
 Metaphorically speaking, on the axis of proximal development, we see a progression of a child from bored to confused. On the axis of external pressure, we will see a U-shaped curve of development outcomes with the best results registered at the pressure matching the optimum push zone.
+
+打个比方，在最近发展轴上，我们看到一个孩子从无聊到困惑的过程。在外部压力轴上，我们会看到一个u型的发展成果曲线，在压力与最优推区匹配的情况下，发展效果最好。
 
 Long-term learning outcomes define the boundaries:
 
+长期学习成果界定了界限:
+
 - **retrogress zone**: distractive pressure reduces learning (e.g. pressure to help parents, to get a job, to participate in crime, to take part in war, etc.)
+- **退步区**：分散注意力的压力会减少学习(例如帮助父母、找工作、参与犯罪、参战等压力)。
 - **comfort zone**: usually minor to huge progress, depending on the personality, environment, and knowledge. Regress is hardly possible in healthy kids in healthy environments with few distractions. We have been programmed by evolution to grow continually. This is at least well pronounced at younger ages before a possible degree of saturation sets in
+- **舒适区**：通常是小到大的进步，取决于个性、环境和知识。在没有太多干扰的健康环境中，回退几乎是不可能的。我们已经被进化规划为不断成长。至少在可能的饱和程度开始出现之前，这一点在较小的年龄阶段就已经很明显了。
 - **push zone**: produces positive outcomes compared with the comfort zone. There is a dramatic increase in value at little pressure (high return on low investment of teaching, tutoring, mentoring, etc.). The optimum usually falls at very low levels of pressure (might be much higher for some kids). There is a quick decline in development speed in the zone where adding pressure diminishes outcomes. The optimum push zone is richest in the sense of accomplishment, and provides for a cumulative increase in enthusiasm, passion, interest, and knowledge. This is the zone that marks the best brain growth
+- **推动区**：与舒适区相比，产生积极的结果。在压力很小的情况下(教学、辅导等低投资的高回报)，价值就会急剧增加。最佳值通常在很低的压力水平下降(对一些孩子来说可能要高得多)。在增加压力会减少结果的区域，发展速度会迅速下降。最佳推动区在成就感方面是最丰富的，它提供了对热情、激情、兴趣和知识的累积增长。这是大脑发育最好的区域。
 - **regress zone**: too much pressure results in regress. The pressure may have a form of the stress of schooling, cram schools, excess [homework](https://supermemo.guru/wiki/Homework), parental blackmail, anger, etc. The end result is stress, bad sleep, bad health, frustration, hating school, hating learning, hating a subject, hating the world, or hating oneself
+- **回退区**：压力过大会导致回退。压力可能有学校教育、补习、家庭作业过多、父母敲诈、愤怒等方面的压力。最终的结果是压力、不好的睡眠、不好的健康、沮丧、讨厌学校、讨厌学习、讨厌一门学科、讨厌这个世界，或者讨厌自己。
 
 ## 11.7 Zone changes
 
+## 区域变化
+
 The delineations and sizes of the zones change in time. In each child, the optimum push zone will differ for different tasks and different contexts. Over time, the zone may change for the same child, the same task and, the same context. In particular, the context of [home](https://supermemo.guru/wiki/Homeschooling), free [democratic school](https://supermemo.guru/wiki/Democratic_school), or a typical school will redefine the zone.
+
+分区的范围和大小随时间而变化。在每个子任务中，不同的任务和不同的上下文的最佳推动区将不同。随着时间的推移，对于相同的子级、相同的任务和相同的上下文，区域可能会发生变化。特别是，家庭的背景，自由民主学校，或一个典型的学校将重新定义区域。
 
 Learning expands knowledge, which improves outcomes in the comfort zone. It may also affect the extent and outcomes in the push zone.
 
+学习扩大了知识，从而提高了舒适区的成果。它还可能影响推动区的范围和结果。
+
 The comfort zone may regress in size in adverse circumstances. The regress zone may contract the push zone. For example, a child operating in conditions of school stress may develop an aversion to learning that will produce more dramatic reactions to all forms of external pressure. In a similar fashion, the comfort zone may shrink. On school-free days, the kid may compensate limits on freedom by losing itself in videogames. Via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness), the regress zone may also expand the optimum push zone by changing pain boundaries, however, it may also stunt the outcomes. This is why schooling still brings positive effects for an average child. Where regressive pressure might do damage at first, it gradually induces learning apathy, and kids forced to go through the motions of schooling will still register some knowledge and pass basic test benchmarks. Those benchmarks are always set way below a child's true potential (for example, see: [Schools are useless in teaching English](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English))
+
+在不利的情况下，舒适区的大小可能会缩小。回退区可以收缩推进区。例如，在学校压力下工作的儿童可能会产生对学习的厌恶，从而对各种形式的外部压力产生更剧烈的反应。同样，舒适区也可能缩小。在不上学的日子里，孩子们可能会通过沉迷于电子游戏来弥补对自由的限制。通过习得性无助，回退区也可以通过改变疼痛边界来扩大最佳推力区，然而，它也可能阻碍结果。这就是为什么学校教育仍然对普通儿童产生积极影响的原因。在最初可能造成损害的倒退压力下，逐渐导致学习冷漠，被迫接受学校教育的儿童仍然会登记一些知识，并通过基本的测试基准。这些基准的设定总是远远低于儿童的真正潜力(例如：学校在教英语方面毫无用处)。
 
 ## 11.8 Correcting development trajectory
 
+## 校正发展轨道
+
 The optimum nudge in the push zone will not only depend on the marginal effect on development. It can also be helpful in overcoming an acceleration threshold, where a small penalty can lead to a wider space of potential acceleration. For example, a kid may be reluctant to switch from a typical computer game to an educational computer game. The latter may require a switch, or a switch and some introductory learning. By guiding the child over the little area of discomfort, further acceleration becomes easy.
+
+推动区的最优推力不仅取决于对发展的边际效应。它还有助于克服加速阈值，在该阈值中，较小的惩罚可以导致更大的潜在加速空间。例如，一个孩子可能不愿意从一个典型的电脑游戏转换成一个教育电脑游戏。后者可能需要一个开关，或一个开关和一些入门学习。通过引导孩子过小的不适区域，进一步的加速变得容易。
 
 It is always safer to operate in the push zone close to the comfort zone. The difference in pressure between the push zone and the regress zone may be hard to measure. For example, the kid may agree to do extra [homework](https://supermemo.guru/wiki/Homework) today, but he will be less likely to do more work over a longer period (e.g. months). In the end, minor over-correction will reduce the long-term outcome.
 
+在靠近舒适区的推力区操作总是更安全。推力区和回归区之间的压力差可能很难测量。例如，孩子可能会同意今天做额外的家庭作业，但他不太可能在更长的时间内(如几个月)做更多的工作。最后，轻微的过度修正将减少长期结果。
+
 All forms of pressure get registered as long-term memories. Repeated pressure works along the principles of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). Small errors will get magnified if they get repeated. This is how the hate of learning develops. This is how [toxic memories](https://supermemo.guru/wiki/Toxic_memories) get entrenched. This is why all forms of over-correction must be compensated with long "resting periods" to let [forgetting](https://supermemo.guru/wiki/Forgetting) do its clean up job. This is why all erroneous forays into the regress zone bear the extra cost of recovery in the comfort zone. Kids who switch from a standard school to a [democratic school](https://supermemo.guru/wiki/Democratic_school) often need long periods of "detox" to become self-reliant and creative again.
+
+所有形式的压力都被记录为长期记忆。重复压力按照间隔重复的原则工作。如果再犯一些小错误，就会被放大。学习的仇恨就是这样发展起来的。有毒的记忆就是这样根深蒂固的。这就是为什么所有形式的过度纠正都必须用长时间的“休息时间”来补偿，让遗忘来完成它的清理工作。这就是为什么所有进入回归区的错误尝试都要承担在舒适区恢复的额外费用的原因。从一所标准学校转到一所民主学校的孩子通常需要长时间的“戒毒期”才能再次变得自力更生和富有创造力。
 
 ## 11.9 Changes to push zone with age
 
+## 不同年龄下的推动区变化
+
 As kids grow older, their personality changes and the inner world gets more complex in proportion to the impact of life adversities. This makes all forms of external optimization harder. The push zone may shrink for kids who grow to love self-determination. The perceived optimum push zone will also shrink due to the complexity of interactions. In other words, the older the kid, the less pushing is needed or welcome. This marks a gradual transition from a child to a free-minded adult. However, intense schooling may have the opposite effect. Teens who have lived a life determined by instructions from others, lose their own initiative. They need to be pushed. This is how schooling can shift the entire optimum push zone in the direction of high pressure. The need to push may keep growing from year to year. Through unceasing coercion, we shift children from curiosity powered by the [learn drive](https://supermemo.guru/wiki/Learn_drive), to [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) and apathy. The most extreme outcomes of that transition are depression, addictions, and even suicide.
+
+随着孩子年龄的增长，他们的个性会发生变化，内心世界也会随着生活逆境的影响而变得更加复杂。这使得所有形式的外部优化变得更加困难。对于那些长大后热爱自决的孩子来说，“推动区域”可能会缩小。由于交互作用的复杂性，感知的最佳推力区也会收缩。换句话说，孩子越大，需要的压力就越少，也就越不受欢迎。这标志着从一个儿童逐渐过渡到一个思想自由的成年人。然而，紧张的学校教育可能会产生相反的效果。按照别人的指示过生活的青少年，会失去自己的主动权。他们需要被推下去。这就是学校教育如何将整个最佳推动区向高压方向移动的方法。推动的需求可能会年复一年地增长。通过不断的强迫，我们将儿童从由学习动力驱动的好奇心转变为学习的无助和冷漠。这种转变最极端的结果是抑郁、上瘾，甚至自杀。
 
 The unceasing pressure of schooling may result in a constant need to increase pressure to achieve the same outcomes
 
+持续不断的学校教育压力可能导致需要不断增加压力才能取得同样的结果
+
 ## 11.10 Complexities of influence
+
+## 影响因素的复杂性
 
 Here are some departures from the simple push zone formula:
 
+以下是一些偏离简单推区公式的地方：
+
 - it can be multi-dimensional for the development domain. For example, a push for math may be less effective than push for geography
+- 对于开发领域来说，它可以是多维的。例如，数学学习可能不如地理学习有效。
 - it can be multi-dimensional for the push vector. For example, mom can be a better pusher than dad
+- 对于推力矢量，它可以是多维的。例如，妈妈可以比爸爸做得更好。
 - function shape may change in all dimensions and over time. In most extreme cases, there may be no optimum push zone as all pushes will produce a negative outcome. For example, a kid may be driven into desperation in which she dreams of the world without parents, teachers, or peers
+- 功能形状可能会随着时间的推移而在所有维度上发生变化。在大多数极端的情况下，可能没有最佳的推动区域，因为所有的推动都会产生负面的结果。例如，一个孩子可能被逼到绝望的境地，她梦想着没有父母、老师或同龄人的世界。
 - optimum development may be achieved with an optimum pull similar to the mechanics of [ZPD](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Zone_of_proximal_development_.28ZPD.29). For example, instead of exerting pressure, a parent may offer help in doing homework. This usually is not a good idea as it may undermine kid's self-reliance, however, the actual long-term effect depends on the child's state of mind
+- 通过与ZPD的力学相似的最佳拉力，可以实现最佳的发展。例如，家长可以在做家庭作业时提供帮助，而不是施加压力。这通常不是一个好主意，因为它可能会损害孩子的自立，然而，实际的长期影响取决于孩子的心理状态。
 
 The simple model of the push zone can be greatly interfered with by parents, school, environment, health, and personality traits. Under pressure of schooling, kids can easily unravel into more complex behaviors where a whole constellation of emotions makes reactions difficult to predict. Even one day's [sleep deficit](https://supermemo.guru/wiki/Sleep_deprivation) can make a world of difference. Sometimes, when the outcome is unsure, the kid would probably be best left to her own devices for a while.
 
+推动区的简单模式会受到父母、学校、环境、健康和个性特征的很大影响。在学校的压力下，孩子们可以很容易地分解成更复杂的行为，在这些行为中，一系列的情绪使得反应很难预测。即使是一天的睡眠不足也会带来巨大的不同。有时候，当结果不确定的时候，孩子们最好还是自己做一段时间。
+
 ## 11.11 Predictability of a push
+
+## 推动的可预测性
 
 In many circumstances, it is impossible to predict the exact effects of a push.
 
+在许多情况下，不可能预测推动的确切效果。
+
 There are still two chief lessons from the model:
 
+从这一模式中仍然有两个主要的教训：
+
 - the push zone can be microscopic. It requires extreme caution. The smarter the kid, the more assertive the kid, the smaller the zone
+- 推力区可以是很小的。这需要非常谨慎。越聪明的孩子，越自信的孩子，区域就越小。
 - employment of the concept requires a good understanding of a particular child. This job can be hard even for an attentive parent. It verges onto impossible in a class of twenty, esp. with a large rotation of teachers who never have much time to get to know individual kids
+- 使用这一概念需要对某一儿童有很好的了解。即使对一个细心的父母来说，这份工作也是很难的。在二十人一班(尤指二十人)，这几乎是不可能的。有大量的老师轮班，他们从来没有太多的时间去了解个别的孩子
 
 ## 11.12 Push zone: examples
 
+## 推动区：例子
+
 This [book](https://supermemo.guru/wiki/Problem_of_Schooling) discusses a number of learning situations that apply to different push zones. Some examples:
 
+本书讨论了许多适用于不同推送区域的学习情况。一些例子：
+
 - [Sudbury Valley School](https://supermemo.guru/wiki/Sudbury_Valley_School) is a good demonstration that for a subset of kids, operating in the comfort zone with no pushing may produce fantastic results. The outcomes may or may not be optimum, however, there is no school like a school with happy kids.
+- 萨德伯里山谷学校(SudburyValley School)是一个很好的证明，对于一部分孩子来说，在舒适的环境中工作而不需要推动，可能会产生奇妙的结果。结果可能是最好的，也可能不是最好的，然而，没有一所学校比得上一所拥有快乐孩子的学校。
 - kids in cram schools may show excellent results in the standardized [testing](https://supermemo.guru/wiki/Testing), but may operate in the regress zone with negative impact on their long-term development. They may be great in math today, and still make for a poor programmer two decades later
-- [the case of Arian](https://supermemo.guru/wiki/Why_kids_hate_school%3F#Arian) shows how a change of school can instantly throw a kid from the comfort zone to the regress zone with dramatic consequences
+- 补习学校的学生在标准化考试中可能表现出优异的成绩，但可能会在回归区操作，对他们的长期发展产生负面影响。它们在今天的数学上可能很棒，但在二十年后的今天，它们仍然是一个蹩脚的程序员。
 - [the case of Simon](https://supermemo.guru/wiki/Social_groups_in_socialization#Are_they_rowdy.3F) shows that school and coercive parenting can result in a lifetime declaration to never engage in learning (ever!)
+- 西蒙的例子表明，学校教育和强制性的父母教育可以导致终生不从事学习的声明(永远！)
 - [my own change of schools](https://supermemo.guru/wiki/Dangers_of_being_a_Straight_A_student#Chemistry_streak_.28Apr_1975_-_May_1976.29) took the impact of school from the retrogress zone to the optimum push zone within days
+- 我自己的学校改革在几天内就把学校的影响从退化区转移到了最佳推进区。
 - I experienced a distraction retrogress in [my fights for dominance in primary school](https://supermemo.guru/wiki/School_fights)
+- 我在小学争取支配地位的斗争中经历了一次分心的退步。
 - my interest in programming and in [SuperMemo](https://supermemo.guru/wiki/SuperMemo)helped me drag myself from a regress zone of boring college to the optimum push zone where self-directed development was accelerated by a dose of external pressure. Instead of losing brain cells and sleep over the study of electronic circuits, [I was able to focus on programming, research, and SuperMemo](https://supermemo.guru/wiki/How_I_invented_perfect_schooling), while being constantly nudged to acceleration by the need to pass exam benchmarks (see: [My school tried to block the best thing in my life](https://supermemo.guru/wiki/Knowledge_valuation_network#Knowledge_valuation_that_affects_the_course_of_life))
+- 我对编程和超级记忆的兴趣帮助我把自己从无聊的大学的退退区拖到了最佳推进区，在那里，自我导向的发展被外部压力加速了。我不是为了学习电子线路而失去脑细胞和睡眠，而是专注于编程、研究和超级备忘录，同时由于需要通过考试基准而不断地被催促加速(见：我的学校试图阻止我生活中最好的事情)。
 - what happens today to kids in war-torn Syria is the prime example of the extreme retrogress in conditions of [toxic stress](https://developingchild.harvard.edu/science/key-concepts/toxic-stress/). The impact of war on learning can extend over generations
+- 今天在饱受战争蹂躏的叙利亚儿童身上发生的事情，是有毒压力条件下极端倒退的最好例子。战争对学习的影响可以延续到几代人。
 
 ## 11.13 Minimum pressure, maximum outcome
 
+## 最小化的压力，最大化的成果
+
 The sizes of the push zones may differ wildly. The healthier the kid, the smarter the kid, the smaller the push zone. Teachers are required to be even-handed, and cannot set different rules for different kids. If they push too hard, they may do more harm than good. If they push too little, some needy kids may stop developing. If they find the optimum for the class, slower kids and the creative types will suffer.
+
+推力区的大小可能有很大的不同。孩子越健康，孩子越聪明，推力区就越小。教师必须不偏不倚，不能为不同的孩子制定不同的规则。如果他们推得太紧，可能弊大于利。如果他们推得太少，一些需要帮助的孩子可能会停止发育。如果他们在课堂上找到了最好的选择，速度慢的孩子和有创造力的孩子就会受到影响。
 
 The key to my reasoning throughout this [book](https://supermemo.guru/wiki/Problem_of_Schooling) is that the cost of pushing can be microscopic (e.g. relative to the size of government investment in education). Kids are equipped with a natural [learn drive](https://supermemo.guru/wiki/Learn_drive). They are wired to learn and explore. They are innately curious. Their personality and environment are essential though. Some will need more pushing and those forces may need to increase over time. Others will show the exact opposite. They will welcome some assistance at younger ages and then they will display their "[rage to master](https://supermemo.guru/wiki/Rage_to_master)" that will power further development. It is the kids that enter the *rage to master* zone that will change the future of this planet! One of the [prime goals of education systems](https://supermemo.guru/wiki/Education_Reform) is to NOT stand in their way.
 
+我在整本书中推理的关键是，推动的成本可以是微乎其微的(例如相对于政府在教育上的投资规模)。孩子们配备了一种自然的学习动力。他们天生就喜欢学习和探索。他们天生好奇。他们的个性和环境是必不可少的。有些将需要更多的推动，这些力量可能需要随着时间的推移而增加。其他人则恰恰相反。他们会在较小的年龄欢迎一些帮助，然后他们将显示他们的“愤怒掌握”，这将推动进一步的发展。这是孩子们进入愤怒掌握区，将改变这个星球的未来！教育系统的主要目标之一是不妨碍它们的发展。
+
 ## 11.14 My own story
+
+## 我自己的故事
 
 Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 
+个人轶事。为什么要用轶事？
+
 I tried hard and cannot recall a single case where a significant push beyond my comfort zone brought any long-term benefits to my life. In How I invented perfect schooling?, I write about enjoying passing exams. There is always a degree of discomfort in such a system. It is never truly perfect. However, I voluntarily joined the system, I self-imposed the learning, and I had a significant say in the curriculum. In that period, the biggest coercive push I received was in the area of control theory.
+
+我努力了，却想不起一个案例，一个重大的超越我的舒适区的努力给我的生活带来了任何长期的好处。在“我如何发明完美的学校教育？”一书中，我写到了如何享受通过考试的乐趣。在这样的制度下，总会有一定程度的不适感。它从来就不是真正的完美。然而，我自愿加入了这个系统，我自己强加了学习，我在课程中有很大的话语权。在那段时间里，我所受到的最大的强制推动是在控制理论领域。
 
 I consider control theory highly important, however, at the time (1986), it was programming that was to [change my life](https://supermemo.guru/wiki/History_of_spaced_repetition). Delays in programming would mean delays in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) which would mean delays in learning across the board. I also objected to the choice of material and the methods of lecturing.
 
+我认为控制理论非常重要，然而，在那个时候(1986)，是编程改变了我的生活。编程的延迟将意味着SuperMemo的延迟，这将意味着全面学习的延迟。我也反对教材的选择和讲课的方法。
+
 My teacher disagreed, and I was forced to take on the subject. Despite the importance of the subject, it is pretty easy to see that if all my teachers took this stance, there would be no [SuperMemo](https://supermemo.guru/wiki/SuperMemo). I hardly had time to write it despite all granted freedoms. I did not fully realize the monumental importance of programming then. However, deep in my [knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network), some hints and intuition pushed me in the right direction. The direction that has changed my life. This text would not have been written if all teachers had been pushing equally hard as my control theory teacher. He was right, control theory is essential for my work and understanding of the brain. However, I was right-er! My investment in programming paid back better. It paid better by an order of magnitude. Additionally, my teacher admitted that computers were better suited to solve my complex control theory problems than his symbolic methods.
+
+我的老师不同意，我被迫学习这门课。尽管这门课很重要，但很容易看出，如果我所有的老师都采取这一立场，就不会有超级备忘录。我几乎没有时间写这篇文章，尽管我已经获得了所有的自由。当时我还没有完全意识到编程的巨大重要性。然而，在我的知识评估网络的深处，一些提示和直觉把我推向了正确的方向。改变了我生活的方向。如果所有的老师都像我的控制论老师一样努力的话，这篇文章就不会被写出来。他是对的，控制理论对我的工作和对大脑的理解是必不可少的。不过，我是对的-呃！我在编程方面的投资回报更高。它的回报要高一个数量级。此外，我的老师承认计算机比他的符号方法更适合解决我复杂的控制理论问题。
 
 Control theory is central to my work. It is central to [this book](https://supermemo.guru/wiki/Problem_of_schooling). Was my course at the university helpful? I still recall a few concepts I learned during the lectures. However, I would get to that field anyway. My interest in the brain and in optimization would make it inevitable. At the same time, there is still a bit of bad taste when I revisit certain subjects. It is a bit like coming back to an abusive home. There is always some unpleasant trepidation about an experience that should otherwise be positive.
 
+控制理论是我工作的核心。它是这本书的核心。我在大学的课程有帮助吗？我仍然记得我在讲座中学到的一些概念。不过，无论如何我都会去那个地方。我对大脑和优化的兴趣将使它不可避免。同时，当我重温某些主题时，仍然有一些不好的味道。这有点像回到一个被虐待的家。对于一个本来应该是积极的经历，总会有一些令人不快的不安。
+
 Sadly, the teaching methods, the classes, the lectures, the textbooks were not that good. I passed the exam. In my rebellion, I even resorted to cheating (possibly the only case in my whole life). During the exam, I was writing off solutions from [Krzysztof Biedalak](https://supermemo.guru/wiki/Krzysztof_Biedalak)'s sheet. The same Biedalak who is now CEO of [SuperMemo World](https://supermemo.guru/wiki/SuperMemo_World). He was always a bit more conscientious. That's why he is a CEO. I was always more rebellious. This is why I write these words.
 
+不幸的是，教学方法，课堂，讲座，课本都不是很好。我通过了考试。在我的反叛中，我甚至求助于欺骗(这可能是我一生中唯一的一例)。在考试中，我从 Krzysztof Biedalak 的试卷上写下了答案。同样是Biedalak，他现在是SuperMemo World的首席执行官。他总是更认真一点。这就是为什么他是首席执行官。我总是更叛逆。这就是我写这些字的原因。
+
 Conclusion: I was never significantly pushed beyond my comfort zone with memorable long-term benefits!
+
+结论：我从来没有因为令人难忘的长期利益而被推到我的舒适区之外！
