第12章机翻完毕

--- a/I would never send my kids to school我再也不会把孩子送去学校/11.Optimum push zone最佳推动区.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/11.Optimum push zone最佳推动区.md
@@ -22,7 +22,7 @@ The **optimum push zone** is usually far narrower than it is popularly assumed. 
 
 > Focus on short-term outcomes in schooling results in pressures extending well beyond the optimum push zone
 >
-> 关注学校教育的短期效果会导致压力远远超出最佳推动区
+> 学校教育关注的短期效果会导致压力远远超出最佳推动区
 >
 
 ## 11.2 Zone of proximal development
