第24章翻译完毕

--- a/I would never send my kids to school我再也不会把孩子送去学校/01.Introduction前言.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/01.Introduction前言.md
@@ -16,7 +16,7 @@ Education systems around the world follow the same wrong design that needs to be
 
 While dreaming about the [Grand Education Reform](https://supermemo.guru/wiki/Reform), I took an unusual approach: instead of talking to adults, I mostly talked to kids. Moreover, I hope to have teen folks as my main target audience. My texts are hard, but they are easier for a smart kid who already knows and feels exactly what I am talking about.
 
-在梦想着[宏大的教育改革](https://supermemo.guru/wiki/Reform)时，我采取了一种不同寻常的方式：我主要和孩子们交谈，而不是和成年人交谈。我的文字很难理解，但对于一个聪明的，已经确切地知道并感受到我在说什么的孩子来说，它们更容易理解。
+在梦想着[教育大改革](https://supermemo.guru/wiki/Reform)时，我采取了一种不同寻常的方式：我主要和孩子们交谈，而不是和成年人交谈。我的文字很难理解，但对于一个聪明的，已经确切地知道并感受到我在说什么的孩子来说，它们更容易理解。
 
 I do **not** believe I will convince many parents, educators or authorities. I primarily hope for kids to start the revolution from the bottom up. Kids are more open, and they understand their own problems better. Moreover, given a bit of love, they are more likely to convince their own parents than I am. See: [Why this book will fail](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)
 
