--- a/I would never send my kids to school我再也不会把孩子送去学校/24.Further reading拓展阅读.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/24.Further reading拓展阅读.md
@@ -1,3 +1,7 @@
 # 24 Further reading
 
+# 拓展阅读
+
 Some chapters have not been integrated with the printable version. See: [Full list of chapters](https://supermemo.guru/wiki/Problem_of_Schooling#Chapters)
+
+一些章节没有包括在可打印版本内。参见：[完整章节列表](https://supermemo.guru/wiki/Problem_of_Schooling#Chapters)
